--- a/INSTALL
+++ b/INSTALL
@@ -69,7 +69,7 @@ Mac OS X Install
   cross-platform and should also work for Mac OS X.  
 
      - python (http://www.python.org)
-     - gtk (http://www.gtk.org)
+     - Gtk (http://www.Gtk.org)
      - pygtk (http://www.pygtk.org)
 
   All of these libraries are also available through Mac Ports on Mac OS X.  Once
@@ -79,7 +79,7 @@ Mac OS X Install
   
   To install dependencies with MacPorts use the following command:
 
-    $ sudo port install py25-gtk aspell aspell-dict-en sqlite3
+    $ sudo port install py25-Gtk aspell aspell-dict-en sqlite3
 
   You may need to add your own language's dictionary (aspell-dict-XX) for 
   spell checking to work completely.
@@ -99,7 +99,7 @@ Windows Build
   to work are given below, but higher version are likely to also work.
   
     python-2.5.1.msi
-    gtk-dev-2.12.9-win32-2.exe
+    Gtk-dev-2.12.9-win32-2.exe
     pygtk-2.12.1-1.win32-py2.5.exe
     pyobject-2.14.1-1.win32-py2.5.exe
     pycario-1.4.12-1.win32-py2.5.exe
